RESOLVED FIXED134219
[iOS][WK2] REGRESSION (r169324): Page jumps to top when you type into a text field
https://bugs.webkit.org/show_bug.cgi?id=134219
Summary [iOS][WK2] REGRESSION (r169324): Page jumps to top when you type into a text ...
Daniel Bates
Reported 2014-06-23 15:52:15 PDT
Following the patch for bug #133262, typing into a text field may cause a noticeable jump to the top of the page when the height of the content is equal to the heigh of the visual rectangle.
Attachments
Patch (3.54 KB, patch)
2014-06-23 16:01 PDT, Daniel Bates
no flags
Daniel Bates
Comment 1 2014-06-23 15:52:43 PDT
Daniel Bates
Comment 2 2014-06-23 16:01:11 PDT
Created attachment 233645 [details] Patch I'm not an expert in our scrolling logic. I'm open to suggestions.
Daniel Bates
Comment 3 2014-06-23 16:09:15 PDT
For completeness, you can observe this regression in a ToT iOS WebKit build as follows: 1. Visit <http://www.twitter.com> and click Sign in. 2. Tap on the Username field to focus it. 3. Tap the > arrow above the keyboard to move the focus to the Password field. 4. Type an arbitrary character, say 'a', into the Password field. Notice that the scroll view noticeably jumps to the top of the page. Compare this to the behavior in iOS 7.1.1 (11D201).
Benjamin Poulain
Comment 4 2014-06-23 16:36:32 PDT
Comment on attachment 233645 [details] Patch That makes sense, the VisibleContentRect updates definitely drives the scroll position.
Daniel Bates
Comment 5 2014-06-23 21:13:24 PDT
Comment on attachment 233645 [details] Patch Clearing flags on attachment: 233645 Committed r170344: <http://trac.webkit.org/changeset/170344>
Daniel Bates
Comment 6 2014-06-23 21:13:29 PDT
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.